--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   padding: 30px;
   border: 30px solid #4522FA;
 }
-.beast {
+.styling {
   text-align: center;
   border: 3px solid #5CD1FF;
   color: #228B22;
@@ -26,14 +26,4 @@
 }
 .beastDescription {
   margin-top: 15px;
-}
-.form {
-  text-align: center;
-  border: 3px solid #5CD1FF;
-  color: #228B22;
-  background-color: #C9F9FF;
-  border-radius: 25px;
-  font-weight: bold;
-  padding: 20px;
-  margin: 5px;
 }
